<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/coffee_list" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/affogato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/affogato_title"/>

        <TextView
            android:id="@+id/americano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/americano_title"/>

        <TextView
            android:id="@+id/latte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/latte_title"/>

        <TextView
            android:id="@+id/cortado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cortado_title"/>

        <TextView
            android:id="@+id/mocha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mocha_title"/>

        <TextView
            android:id="@+id/flatwhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/flatwhite_title"/>

        <TextView
            android:id="@+id/macchiato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/macchiato_title"/>

        <TextView
            android:id="@+id/ristretto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ristretto_title"/>

        <TextView
            android:id="@+id/cappuccino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cappuccino_title"/>

        <TextView
            android:id="@+id/irish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/irish_title"/>


    </LinearLayout>
</ScrollView>
